--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.makarov.wonderfulthoughts"
+        applicationId "com.makarov.wonderfulnotes"
         minSdkVersion 16
         targetSdkVersion 29
         versionCode 1
