--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,6 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
@@ -34,4 +33,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.google.android.material:material:1.2.0'
     implementation 'org.jetbrains:annotations-java5:15.0'
+    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.2.3'
 }
